Fix bug wherein the expand/collapse icon goes to the right middle portion of the screen when the row is drilled down/opened. This bug is documented under CharmNT #SVS_00018192.

--- a/aem-webapp/src/main/webapp/resources/css/react/group-config.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/group-config.css
@@ -1,12 +1,4 @@
-.group-config > table {
-    width: 100%
-}
-
-.group-config > table > tbody > tr > td {
-    width: 100%;
-    text-align: left
-}
-
-.group-config > table > tbody > tr > td > div > input  {
-    float: right
+table.groupConfig > tbody > tr > td.row-sub-component-container {
+    padding-left: 10px !important;
+    padding-bottom: 10px !important
 }
